--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -189,7 +189,7 @@ float:left;display:inline-block;
 }
 ul#menu .tab_body {
 	position: absolute;
-	top: 30px;
+	top: 27px;
 	left: 0px;
 }
 ul.menu .tab_body {
@@ -210,7 +210,7 @@ ul.menu .tab_body {
 	padding: 14px 14px 5px; !important;
 	width: 190px;
 	right: 20px;
-  top: 3px;
+/*  top: 3px;*/
 	background-color: #FFF;
 	z-index: 500;
 }
